--- a/codigo/src/main/java/PaginaInicial.form
+++ b/codigo/src/main/java/PaginaInicial.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="PaginaInicial">
-  <grid id="27dc6" binding="painelPrincipal" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="painelPrincipal" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="800" height="600"/>
@@ -13,41 +13,128 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="341c" class="javax.swing.JLabel">
+      <grid id="e4f23" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <font name="JetBrains Mono" size="16" style="0"/>
+          <background color="-11578538"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="14645" class="javax.swing.JButton" binding="atletasButton1" default-binding="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Atletas"/>
+            </properties>
+          </component>
+          <component id="98a3b" class="javax.swing.JButton" binding="estatisticasButton" default-binding="true">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Estatisticas"/>
+            </properties>
+          </component>
+          <component id="9021a" class="javax.swing.JButton" binding="sobreButton" default-binding="true">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Sobre"/>
+            </properties>
+          </component>
+          <vspacer id="b37c4">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+          <component id="f672c" class="javax.swing.JButton" binding="eventosButton1" default-binding="true">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Eventos"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="8d255" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="cce27" class="javax.swing.JButton" binding="atletasButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-3172298"/>
+              <borderPainted value="false"/>
+              <enabled value="true"/>
+              <font name="Consolas" size="28" style="0"/>
+              <foreground color="-1"/>
+              <text value="Atletas"/>
+            </properties>
+          </component>
+          <component id="8e173" class="javax.swing.JButton" binding="eventosButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-10100681"/>
+              <borderPainted value="false"/>
+              <contentAreaFilled value="true"/>
+              <enabled value="true"/>
+              <focusCycleRoot value="false"/>
+              <font name="Consolas" size="28" style="0"/>
+              <foreground color="-1"/>
+              <text value="Eventos"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <component id="341c" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <font name="Consolas" size="28" style="0"/>
           <text value="Gestor de Torneios"/>
         </properties>
       </component>
-      <component id="8e173" class="javax.swing.JButton" binding="eventosButton" default-binding="true">
+      <component id="33ee2" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-10100681"/>
-          <borderPainted value="false"/>
-          <contentAreaFilled value="true"/>
-          <enabled value="true"/>
-          <focusCycleRoot value="false"/>
-          <font name="JetBrains Mono" size="14" style="0"/>
-          <foreground color="-1"/>
-          <text value="Eventos"/>
+          <text value="NomeUser"/>
         </properties>
       </component>
-      <component id="cce27" class="javax.swing.JButton" binding="atletasButton" default-binding="true">
+      <component id="a9c38" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-3172298"/>
-          <borderPainted value="false"/>
-          <enabled value="true"/>
-          <font name="JetBrains Mono" size="14" style="0"/>
-          <foreground color="-1"/>
-          <text value="Atletas"/>
+          <text value="FotoUser"/>
         </properties>
       </component>
     </children>
