--- a/codigo/src/main/java/PaginaInicial.form
+++ b/codigo/src/main/java/PaginaInicial.form
@@ -19,7 +19,7 @@
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-11578538"/>
+          <background color="-8551544"/>
         </properties>
         <border type="none"/>
         <children>
@@ -121,20 +121,24 @@
           <text value="Gestor de Torneios"/>
         </properties>
       </component>
-      <component id="33ee2" class="javax.swing.JLabel">
+      <component id="33ee2" class="javax.swing.JLabel" binding="nomeUser">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <font name="Consolas" size="20"/>
           <text value="NomeUser"/>
         </properties>
       </component>
-      <component id="a9c38" class="javax.swing.JLabel">
+      <component id="691a2" class="javax.swing.JLabel" binding="fotoUser">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="FotoUser"/>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
+          <text value=""/>
+          <verticalAlignment value="0"/>
         </properties>
       </component>
     </children>
