--- a/codigo/src/main/java/Eventos.form
+++ b/codigo/src/main/java/Eventos.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="804" height="604"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="800" height="600"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="a01bf" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
