--- a/codigo/src/main/java/AdicionarEventos.form
+++ b/codigo/src/main/java/AdicionarEventos.form
@@ -72,7 +72,7 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
-              <component id="93ad" class="javax.swing.JButton" binding="eventosButton1" default-binding="true">
+              <component id="93ad" class="javax.swing.JButton" binding="eventosButton" default-binding="true">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -188,7 +188,7 @@
                   <text value="Descrição"/>
                 </properties>
               </component>
-              <component id="f3f8b" class="javax.swing.JTextField" binding="dataFinalTextField">
+              <component id="bb431" class="javax.swing.JFormattedTextField" binding="dataFinalTextField">
                 <constraints>
                   <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -203,7 +203,7 @@
                   <toolTipText value=""/>
                 </properties>
               </component>
-              <component id="d7b24" class="javax.swing.JTextField" binding="descricaoTextField">
+              <component id="725ea" class="javax.swing.JFormattedTextField" binding="dataInicialTextField">
                 <constraints>
                   <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
