--- a/codigo/src/main/java/PaginaInicial.form
+++ b/codigo/src/main/java/PaginaInicial.form
@@ -13,19 +13,19 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="e4f23" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="e4f23" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-8551544"/>
+          <background color="-13947344"/>
         </properties>
         <border type="none"/>
         <children>
-          <component id="14645" class="javax.swing.JButton" binding="atletasButton1" default-binding="true">
+          <component id="14645" class="javax.swing.JButton" binding="atletasButtonSide">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-13947344"/>
@@ -34,7 +34,7 @@
               <text value="Atletas"/>
             </properties>
           </component>
-          <component id="98a3b" class="javax.swing.JButton" binding="estatisticasButton" default-binding="true">
+          <component id="98a3b" class="javax.swing.JButton" binding="estatisticasButtonSide">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -45,9 +45,9 @@
               <text value="Estatisticas"/>
             </properties>
           </component>
-          <component id="9021a" class="javax.swing.JButton" binding="sobreButton" default-binding="true">
+          <component id="9021a" class="javax.swing.JButton" binding="sobreButtonSide">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-13947344"/>
@@ -61,9 +61,20 @@
               <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="f672c" class="javax.swing.JButton" binding="eventosButton2" default-binding="true">
+          <component id="aabec" class="javax.swing.JButton" binding="loginButtonSide">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Login"/>
+            </properties>
+          </component>
+          <component id="f672c" class="javax.swing.JButton" binding="eventosButtonSide">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-13947344"/>
