--- a/codigo/src/main/java/AdicionarEventos.form
+++ b/codigo/src/main/java/AdicionarEventos.form
@@ -156,7 +156,7 @@
                   <text value="Arte Marcial"/>
                 </properties>
               </component>
-              <component id="3e5a5" class="javax.swing.JTextField" binding="arteMarcialTextField">
+              <component id="61f9b" class="javax.swing.JComboBox" binding="arteMarcialComboBox">
                 <constraints>
                   <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
