--- a/codigo/src/main/java/AdicionarEventos.form
+++ b/codigo/src/main/java/AdicionarEventos.form
@@ -34,7 +34,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="fc5a4" class="javax.swing.JButton" binding="atletasButton1" default-binding="true">
+              <component id="fc5a4" class="javax.swing.JButton" binding="atletasButtonSide">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -45,7 +45,7 @@
                   <text value="Atletas"/>
                 </properties>
               </component>
-              <component id="2cd2b" class="javax.swing.JButton" binding="estatisticasButton" default-binding="true">
+              <component id="2cd2b" class="javax.swing.JButton" binding="estatisticasButtonSide">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -56,7 +56,7 @@
                   <text value="Estatisticas"/>
                 </properties>
               </component>
-              <component id="5d8df" class="javax.swing.JButton" binding="sobreButton" default-binding="true">
+              <component id="5d8df" class="javax.swing.JButton" binding="sobreButtonSide">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -72,7 +72,7 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
-              <component id="93ad" class="javax.swing.JButton" binding="eventosButton" default-binding="true">
+              <component id="93ad" class="javax.swing.JButton" binding="eventosButtonSide">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
