--- a/codigo/src/main/java/PaginaEventos.form
+++ b/codigo/src/main/java/PaginaEventos.form
@@ -26,7 +26,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="4c50c" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="4c50c" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -36,7 +36,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="b38a2" class="javax.swing.JButton" binding="atletasButton1" default-binding="true">
+              <component id="b38a2" class="javax.swing.JButton" binding="atletasButtonSide">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -47,7 +47,7 @@
                   <text value="Atletas"/>
                 </properties>
               </component>
-              <component id="6e178" class="javax.swing.JButton" binding="estatisticasButton" default-binding="true">
+              <component id="6e178" class="javax.swing.JButton" binding="estatisticasButtonSide">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -58,9 +58,9 @@
                   <text value="Estatisticas"/>
                 </properties>
               </component>
-              <component id="26c00" class="javax.swing.JButton" binding="sobreButton" default-binding="true">
+              <component id="26c00" class="javax.swing.JButton" binding="sobreButtonSide">
                 <constraints>
-                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13947344"/>
@@ -69,12 +69,7 @@
                   <text value="Sobre"/>
                 </properties>
               </component>
-              <vspacer id="1d149">
-                <constraints>
-                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                </constraints>
-              </vspacer>
-              <component id="ff2dc" class="javax.swing.JButton" binding="eventosButton" default-binding="true">
+              <component id="ff2dc" class="javax.swing.JButton" binding="eventosButtonSide">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -87,7 +82,7 @@
               </component>
               <component id="2a715" class="javax.swing.JButton" binding="loginButtonSide">
                 <constraints>
-                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13947344"/>
@@ -96,6 +91,22 @@
                   <text value="Login"/>
                 </properties>
               </component>
+              <component id="a3763" class="javax.swing.JButton" binding="menuInicialButtonSide">
+                <constraints>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13947344"/>
+                  <font name="Consolas" size="18"/>
+                  <foreground color="-1"/>
+                  <text value="Menu Inicial"/>
+                </properties>
+              </component>
+              <vspacer id="cc017">
+                <constraints>
+                  <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                </constraints>
+              </vspacer>
             </children>
           </grid>
           <component id="31e0" class="javax.swing.JLabel">
