--- a/codigo/src/main/java/PaginaAtletas.form
+++ b/codigo/src/main/java/PaginaAtletas.form
@@ -34,7 +34,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <grid id="51d17" layout-manager="GridLayoutManager" row-count="6" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="51d17" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -68,7 +68,7 @@
                   </component>
                   <component id="5f67f" class="javax.swing.JButton" binding="sobreButtonSide">
                     <constraints>
-                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13947344"/>
@@ -77,11 +77,6 @@
                       <text value="Sobre"/>
                     </properties>
                   </component>
-                  <vspacer id="d8d43">
-                    <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                  </vspacer>
                   <component id="d85e5" class="javax.swing.JButton" binding="eventosButtonSide">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -95,7 +90,7 @@
                   </component>
                   <component id="50c2f" class="javax.swing.JButton" binding="loginButtonSide">
                     <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13947344"/>
@@ -104,6 +99,22 @@
                       <text value="Login"/>
                     </properties>
                   </component>
+                  <component id="764af" class="javax.swing.JButton" binding="menuInicialButtonSide">
+                    <constraints>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-13947344"/>
+                      <font name="Consolas" size="18"/>
+                      <foreground color="-1"/>
+                      <text value="Menu Inicial"/>
+                    </properties>
+                  </component>
+                  <vspacer id="da7d4">
+                    <constraints>
+                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                  </vspacer>
                 </children>
               </grid>
               <component id="542dd" class="javax.swing.JLabel">
