--- a/codigo/src/main/java/PaginaEventos.form
+++ b/codigo/src/main/java/PaginaEventos.form
@@ -10,7 +10,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="a01bf" layout-manager="GridLayoutManager" row-count="3" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="a01bf" layout-manager="GridLayoutManager" row-count="4" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -29,7 +29,7 @@
           <grid id="4c50c" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="3" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-8551544"/>
@@ -161,15 +161,37 @@
               <text value="Adicionar Eventos"/>
             </properties>
           </component>
+          <component id="d36fb" class="javax.swing.JButton" binding="editarEventosButton">
+            <constraints>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Editar Eventos"/>
+            </properties>
+          </component>
           <component id="a5ef6" class="javax.swing.JButton" binding="importarEventosButton">
             <constraints>
-              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <background color="-13947344"/>
               <font name="Consolas" size="18"/>
               <foreground color="-1"/>
               <text value="Importar Eventos"/>
+            </properties>
+          </component>
+          <component id="6c0e4" class="javax.swing.JButton" binding="eliminarEventosButton">
+            <constraints>
+              <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13947344"/>
+              <font name="Consolas" size="18"/>
+              <foreground color="-1"/>
+              <text value="Eliminar Eventos"/>
             </properties>
           </component>
         </children>
