--- a/codigo/src/main/java/PaginaProvas.form
+++ b/codigo/src/main/java/PaginaProvas.form
@@ -35,7 +35,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <grid id="51e30" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="51e30" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="3" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -58,7 +58,7 @@
                   </component>
                   <component id="aa1a4" class="javax.swing.JButton" binding="estatisticasButtonSide">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13947344"/>
@@ -69,7 +69,7 @@
                   </component>
                   <component id="526b3" class="javax.swing.JButton" binding="sobreButtonSide">
                     <constraints>
-                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13947344"/>
@@ -91,7 +91,7 @@
                   </component>
                   <component id="64f28" class="javax.swing.JButton" binding="loginButtonSide">
                     <constraints>
-                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13947344"/>
@@ -102,7 +102,7 @@
                   </component>
                   <component id="778d5" class="javax.swing.JButton" binding="menuInicialButtonSide">
                     <constraints>
-                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <background color="-13947344"/>
@@ -113,9 +113,20 @@
                   </component>
                   <vspacer id="ae951">
                     <constraints>
-                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </vspacer>
+                  <component id="ac7b2" class="javax.swing.JButton" binding="provasButtonSide">
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <background color="-13947344"/>
+                      <font name="Consolas" size="18"/>
+                      <foreground color="-1"/>
+                      <text value="Provas"/>
+                    </properties>
+                  </component>
                 </children>
               </grid>
               <component id="6bcf7" class="javax.swing.JLabel">
@@ -172,7 +183,7 @@
               </component>
               <component id="34490" class="javax.swing.JButton" binding="editarProvasButton">
                 <constraints>
-                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13947344"/>
@@ -183,7 +194,7 @@
               </component>
               <component id="acd2f" class="javax.swing.JButton" binding="eliminarProvasButton">
                 <constraints>
-                  <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13947344"/>
@@ -203,15 +214,15 @@
                   <text value="Importar Provas"/>
                 </properties>
               </component>
-              <component id="8147b" class="javax.swing.JButton">
+              <component id="8147b" class="javax.swing.JButton" binding="adicAtletaÀProvaButton">
                 <constraints>
-                  <grid row="3" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <background color="-13947344"/>
                   <font name="Consolas" size="18"/>
                   <foreground color="-1"/>
-                  <text value="Adic. Atleta à Prova"/>
+                  <text value="Adic.Atleta à Prova"/>
                 </properties>
               </component>
             </children>
